tests/fixtures/errors/at_in_const.gcl
// Graph reference in const expression: @x not allowed
param x: Dimensionless = 1.0;
const node BAD: Dimensionless = @x + 1.0;
